// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen.io/ui-core - <Checkbox /> should set primary checkbox style 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  position: relative;
  display: inline-block;
  border: solid 1px #27566D;
  border-radius: 2px;
  width: 12px;
  height: 12px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clippath: inset(50%);
  clippath: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<Component
  id="id"
  onChange={[MockFunction]}
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.input
        checked={false}
        disabled={false}
        id="id"
        onChange={[Function]}
      >
        <input
          checked={false}
          className="c1"
          disabled={false}
          id="id"
          onChange={[Function]}
          type="checkbox"
        />
      </styled.input>
      <styled.div
        checked={false}
        type="primary"
      >
        <div
          checked={false}
          className="c2"
          type="primary"
        >
          <AnimatePresence />
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;

exports[`@keen.io/ui-core - <Checkbox /> should set secondary checkbox style 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  position: relative;
  display: inline-block;
  border: solid 1px rgba(39,86,109,0.2);
  background: rgba(119,163,187,0.05);
  border-radius: 4px;
  width: 15px;
  height: 15px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clippath: inset(50%);
  clippath: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<Component
  id="id"
  onChange={[MockFunction]}
  type="secondary"
>
  <styled.div>
    <div
      className="c0"
    >
      <styled.input
        checked={false}
        disabled={false}
        id="id"
        onChange={[Function]}
      >
        <input
          checked={false}
          className="c1"
          disabled={false}
          id="id"
          onChange={[Function]}
          type="checkbox"
        />
      </styled.input>
      <styled.div
        checked={false}
        type="secondary"
      >
        <div
          checked={false}
          className="c2"
          type="secondary"
        >
          <AnimatePresence />
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;
